implement web socket and added UI changes